styles.css
h1 {
    color:blue;
}

.card {
    display:inline-block;
}

.icons {
    width:50px;
}

.navbar-brand {
    color: rgba(236, 230, 230, 0.801);
}

.row {
    margin-bottom: 30px;
}

